--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -90,7 +90,7 @@ body * {
 }
 
 .textfield > input::placeholder{
-    color:gray;
+    color:lightgray;
 }
 
 .btn-login{
@@ -107,7 +107,7 @@ body * {
     color:black;
     background-color:#D6D318;
     cursor: pointer;
-    box-shadow: 0px 10px 40px -12px white;
+    box-shadow: none;
 }
 
 .link-cadastro{
