--- a/css/signup.css
+++ b/css/signup.css
@@ -93,7 +93,7 @@ body * {
 }
 
 .textfield > input::placeholder{
-    color:gray;
+    color:lightgray;
 }
 
 .btn-login{
@@ -110,7 +110,7 @@ body * {
     color:black;
     background-color:#D6D318;
     cursor: pointer;
-    box-shadow: 0px 10px 40px -12px white;
+    box-shadow: none;
 }
 
 .link-cadastro{
