--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -7,6 +7,13 @@ body{
 body * {
     box-sizing: border-box;
 }
+
+.logoImagem img{
+    position: absolute;
+    width: 200px;
+    height: auto;
+    padding-bottom: 15px;
+}
 /* Div geral*/
 .main-login{
     width: 100vw;
