--- a/css/signup.css
+++ b/css/signup.css
@@ -17,6 +17,13 @@ body * {
     align-items: center;
 }
 
+.logoImagem img{
+    position: absolute;
+    width: 200px;
+    height: auto;
+    padding-bottom: 15px;
+}
+
 /* Texto esquerda */
 .left-login{
     width: 50vw;
